<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- strings activity detalhes -->
    <string name="app_name">ARock</string>
    <string name="title_activity_evento_detalhe">Detalhe evento</string>
    <string name="evento_local_logradouro">%1$s, %2$s, %3$s</string>
    <string name="evento_local_cidade">%1$s - %2$s, %3$s</string>
    <string name="evento_titulo_banda">%s</string>
    <string name="evento_banda">%s</string>
    <string name="evento_data">Data: %s</string>
    <string name="evento_valor">Valor: R$ %.2f</string>
    <string name="menu_configuracoes">Configurações</string>

    <!-- mensagens globais -->
    <string name="global_aguarde">Aguarde&#8230;</string>
    <string name="global_erro_requisicao">Erro ao realizar requisição, verifique as configurações</string>
    <string name="global_estilo">Estilo</string>
    <string name="global_atualizar">Atualizar</string>
    <string name="global_casa">Casa</string>
    <string name="global_banda">Banda</string>
    <string name="global_cidade">Cidade</string>
    <string name="global_cancelar">Cancelar</string>
    <string name="global_sim">Sim</string>
    <string name="global_nao">Não</string>

    <!-- activity para testes HTTP -->
    <string name="title_activity_teste_http">Teste HTTP</string>

    <!-- activity para configurações -->
    <string name="title_activity_configuracao">Configurações</string>
    <string name="configuracao_host">Host</string>
    <string name="configuracao_host_padrao">localhost</string>
    <string name="configuracao_porta">Porta</string>
    <string name="configuracao_porta_padrao">8080</string>

    <!-- activity inicial -->
    <string name="title_activity_inicial">ARock</string>
    <string name="logo_arock">Logo ARock</string>
    <string name="tentar_novamente">Tentar Novamente</string>
    <string name="toque_inicial">Toque na tela para continuar</string>
    <string name="inicial_ContinuarCache">Não foi possível sincronizar os dados. Continuar com os dados da última sincronização?</string>

    <!-- activity casas -->
    <string name="title_activity_casas">Casas</string>
    <string name="activity_casas_informacaoFiltro">Exibindo apenas as Casas das Cidades filtradas</string>

    <!-- activity cidades -->
    <string name="title_activity_cidade">Cidades</string>

    <!-- activity bandas -->
    <string name="title_activity_banda">BandaActivity</string>
    <string name="activity_bandas_informacaoFiltro">Exibindo apenas as Bandas dos Estilos filtrados</string>

    <!-- activity estilos -->
    <string name="title_activity_estilo">EstiloActivity</string>

    <!--  activity mapa -->
    <string name="title_activity_mapa">Mapa</string>
    
    <!--  activity evento_detalhe -->
    <string name="evento_localizacao">Localização</string>
    <string name="evento_mapaNaoDefinido">Mapa não definido</string>
    <string name="visualizar_eventos">Visualizar Eventos</string>
    <string name="exibir_localizacao">Exibir minha localização</string>
    <string name="evento_localizacaoNaoDisponivel">Localização indisponível. Certifique-se de que um recurso de Localização, como GPS, está habilitado.</string>
    <string name="evento_minhaLocalizacao">Minha Localização</string>
    <string name="evento_configurar">Configurar</string>
    <string name="evento_compartilhar">Compartilhar</string>
    <string name="evento_compartilhar_via">Compartilhar via</string>
    <string name="evento_compartilhar_assunto">%1$s apresenta %2$s</string>
    <string name="evento_compartilhar_texto">Evento "%1$s", %2$s, apresentando %3$s</string>
</resources>